# transition-tracker

./: LICENSE  README.md  pyproject.toml  transition-tracker.desktop
.github/workflows/: build-deb.yml  build-rpm.yml  transifex-sync.yml
.tx/: config
debian/: changelog  control  copyright  files  rules  transition-tracker.install  watch
po/: sv.mo  sv.po  transition-tracker.pot
