[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transition-tracker"
version = "0.1.1"
description = "GTK4 tool to track library transitions in Debian and Ubuntu"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
transition-tracker = "transition_tracker.main:main"

[tool.setuptools.packages.find]
where = ["src"]
